# adv-rag-mastery

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
01_document_loaders/: 01_document_loaders.md
01_document_loaders/knowledge_source/: transformers.txt
01_document_loaders/notebooks/: csv_loader.ipynb  json_loader.ipynb  pdf_loader.ipynb  text_loader.ipynb  web_loader.ipynb
02_text_splitters/: 02_text_splitters.md
02_text_splitters/notebooks/: 01_charcter_text_splitter.ipynb  02_recursive_text_splitter.ipynb  03_document_text_splitter.ipynb
03_embeddings/: 03_embeddings.md
03_embeddings/notebboks/: ollaama_embedding.ipynb  openai_embeddings.ipynb
04_vector_stores/notebooks/: chromadb_crud_operations.ipynb  chromadb_load_existing_db.ipynb  chromadb_pdf_pipeline.ipynb
05_retrievers/notebooks/: 01_similarity_search.ipynb  02_similarity_score_threshold.ipynb  03_mmr.ipynb
