[project]
name = "adv-rag-mastery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ipykernel>=7.2.0",
    "jq>=1.11.0",
    "langchain>=1.2.18",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-experimental>=0.4.1",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=1.1.2",
    "lxml>=6.1.0",
    "pdfminer-six>=20251230",
    "pdfplumber>=0.11.9",
    "pypdf>=6.11.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "rapidocr-onnxruntime>=1.4.4",
    "termcolor>=3.3.0",
    "tiktoken>=0.12.0",
    "unstructured[xlsx]>=0.22.28",
]
